[package]
name = "learnRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "activity"
path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
